--- a/Synapse/src/bicep-deployment/Pattern5/config-infra-dev.yml
+++ b/Synapse/src/bicep-deployment/Pattern5/config-infra-dev.yml
@@ -1,16 +1,14 @@
 variables:
-
   # Global
   ap_vm_image: windows-2019
 
-  location: eastus 
-  prefix: sa33
-  postfix: jh33
+  location: northeurope
+  prefix: synapse
+  postfix: cicd
   environment: dev
 
-  # Azure DevOps 
-  ado_service_connection_rg: JHAnalyticsbox
-
+  # Azure DevOps
+  ado_service_connection_rg: sc-synapse-cicd
 
   # IaC
   baseName: $(prefix)$(postfix)$(environment)
@@ -18,6 +16,6 @@ variables:
   sqlServerName: $(prefix)-sqlsrc-$(postfix)-$(environment)
   synapseWorkSpaceName: $(prefix)-synapse-$(postfix)-$(environment)
   dataLakeg2SynapseName: $(prefix)adlssyn$(postfix)$(environment)
-  storageAccountName : $(prefix)wwibacpac$(postfix)$(environment)
-  containerName : wwibacpac
+  storageAccountName: $(prefix)wwibacpac$(postfix)$(environment)
+  containerName: wwibacpac
   keyVaultName: $(prefix)-akv-$(postfix)-$(environment)
